# home_marauders_map

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: house.yaml
scripts/: calibrate.py  deploy_to_pi.sh  replay.py
src/marauders_map/: app.py  capture.py  classes.py  detector.py  geometry.py  house.py  iou_tracker.py  live.py  logger.py  pipeline.py  reid.py  server.py  tracker_global.py  viz.py
src/marauders_map/backends/: hailo_backend.py  ultralytics_backend.py
src/marauders_map/static/: calibrate.js  common.js  edit.js  styles.css  view.js
src/marauders_map/templates/: _base.html  calibrate.html  edit.html  index.html  view.html
tests/: test_app.py  test_classes.py  test_geometry.py  test_house.py  test_house_dump.py  test_server.py  test_tracker_global.py  test_viz.py
